name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:
    base >= 4 && < 5
    , filepath >= 1.4
    , hakyll >= 4.9
    , pandoc-types >= 1.17
    , time >= 1.5
  ghc-options:      -threaded
  default-language: Haskell2010
